:green_apple: Fingerprint : fix overflow hidden on IOS

--- a/client/src/mobile/components/steps/FingerprintStep/FingerprintStep.scss
+++ b/client/src/mobile/components/steps/FingerprintStep/FingerprintStep.scss
@@ -17,6 +17,7 @@
     border-radius: 6rem;
     position: relative;
     overflow: hidden;
+    transform: translate3d(0, 0, 0);
 
     &__progression {
       position: absolute;
